feat(proto): implement MTProto2 primitives

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -81,6 +81,9 @@ issues:
     - linters: [gocyclo, gocognit]
       text: "Parse"
 
+    - path: "intermediate\\.go"
+      linters: [gochecknoglobals]
+
     # Disable linters that are annoying in tests.
     - path: _test\.go
       linters:
