--- a/.golangci.yml
+++ b/.golangci.yml
@@ -79,7 +79,7 @@ issues:
   exclude-rules:
     # TODO(ernado): Should we refactor Parse() functions?
     - linters: [gocyclo, gocognit]
-      text: "Parse"
+      text: "(Parse|CreateAuthKey)"
 
     - path: "intermediate\\.go"
       linters: [gochecknoglobals]
