--- a/.golangci.yml
+++ b/.golangci.yml
@@ -79,7 +79,7 @@ issues:
   exclude-rules:
     # TODO(ernado): Should we refactor Parse() functions?
     - linters: [gocyclo, gocognit]
-      text: "(Parse|CreateAuthKey)"
+      text: "createAuthKey"
 
     - linters: [gocritic]
       text: "commentedOutCode"
@@ -107,3 +107,5 @@ issues:
     # Ignore linters in main packages.
     - path: main\.go
       linters: [gochecknoglobals, goconst, funlen, gocognit, gocyclo]
+    - linters: [goconst]
+      text: 'string `bool`'
