--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,30 +33,27 @@ jobs:
           version: latest
 
   tests-on-windows:
-    needs: golangci-lint # run after golangci-lint action to not produce duplicated errors
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15 # test only the latest go version to speed up CI
+          go-version: 1.15
       - name: Run tests
         run: go test ./...
         continue-on-error: true
   tests-on-macos:
-    needs: golangci-lint # run after golangci-lint action to not produce duplicated errors
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15 # test only the latest go version to speed up CI
+          go-version: 1.15
       - name: Run tests
         run: make test
   tests-on-unix:
-    needs: golangci-lint # run after golangci-lint action to not produce duplicated errors
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -76,8 +73,29 @@ jobs:
             ${{ runner.os }}-go-${{ matrix.golang }}-
       - name: Run tests
         run: make test
+  e2e:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        golang:
+          - 1.15
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.golang }}
+      - uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ matrix.golang }}-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ matrix.golang }}-
+      - name: Run tests
+        env:
+          GOTD_TEST_EXTERNAL: 1
+        run: go test ./...
   coverage:
-    needs: golangci-lint # run after golangci-lint action to not produce duplicated errors
     runs-on: ubuntu-latest
     strategy:
       matrix:
