test: run in "e2e" only "e2e" tests

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -94,7 +94,8 @@ jobs:
       - name: Run tests
         env:
           GOTD_TEST_EXTERNAL: 1
-        run: go test ./...
+        # Run all tests that starts with "TestExternalE2E".
+        run: go test -race -v -run ^TestExternalE2E ./...
   coverage:
     runs-on: ubuntu-latest
     strategy:
