ci: use codecov

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -117,13 +117,10 @@ jobs:
             coverage-${{ runner.os }}-go-${{ matrix.golang }}-
       - name: Run tests with coverage
         run: make coverage
-      - name: Convert coverage.out to coverage.lcov
-        uses: jandelgado/gcov2lcov-action@v1.0.8
-      - name: Coveralls
-        uses: coverallsapp/github-action@v1.1.2
+      - name: Send coverage
+        uses: codecov/codecov-action@v1
         with:
-          github-token: ${{ secrets.github_token }}
-          path-to-lcov: coverage.lcov
+          file: coverage.out
   check-generated:
     runs-on: ubuntu-latest
     steps:
