ci(coverage): fix fetch-depth

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -105,6 +105,8 @@ jobs:
           - 1.15
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 10
       - name: Install Go
         uses: actions/setup-go@v2
         with:
