--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -107,6 +107,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 10
+      - name: Unshallow
+        run: git fetch --prune --unshallow
       - name: Install Go
         uses: actions/setup-go@v2
         with:
