--- a/.golangci.yml
+++ b/.golangci.yml
@@ -106,7 +106,7 @@ issues:
         - gochecknoglobals
     # Ignore shadowing of err.
     - linters: [govet]
-      text: 'declaration of "(err|ctx)"'
+      text: 'declaration of "(err|ctx|log)"'
     # Ignore linters in main packages.
     - path: main\.go
       linters: [gochecknoglobals, goconst, funlen, gocognit, gocyclo]
