chore: add some docs, examples, fix exchange test to avoid deadlock

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -78,7 +78,8 @@ issues:
   exclude-rules:
     # TODO(ernado): Should we refactor Parse() functions?
     - linters: [gocyclo, gocognit]
-      text: "createAuthKey"
+      path: exchange
+      text: "Run"
 
     - linters: [gocritic]
       text: "commentedOutCode"
