ci: add ruleguard rule to suggest shorter fields setting

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,6 +30,9 @@ linters-settings:
       - whyNoLint
       - singleCaseSwitch
       - commentedOutCode
+    settings:
+      ruleguard:
+        rules: './gorules/rules.go'
 
 linters:
   disable-all: true
