--- a/.codecov.yaml
+++ b/.codecov.yaml
@@ -1,6 +1,7 @@
 ignore:
   # Ignore generated files.
   - "**/tl_*_gen.go"
+  - "**/*.gen.go"
   - "**/bindata.go"
   # Ignore commands (examples or internal utilities).
   - "cmd/*/*.go"
