--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -41,18 +41,21 @@ jobs:
       - name: Generate files
         run: make generate
 
+      - name: Mod tidy
+        run: go mod tidy
+
       - name: Create PR
         id: cpr
         uses: peter-evans/create-pull-request@v3.8.2
         with:
           author: GitHub <actions@github.com>
           committer: GitHub <actions@github.com>
-          commit-message: 'chore: update schema'
-          branch: pr/update-schema
+          commit-message: 'feat(schema): update latest layer'
+          branch: feat/update-schema
           delete-branch: true
 
-          title: Update schema
+          title: Update schema to latest layer
           body: |
-            Update Telegram API schema.
+            Update Telegram API schema to latest layer.
           labels: |
             dependencies
