chore(gen): move tools to separate go.mod
Also pass -mod=readonly flag so running go generate
won’t change go.mod or go.sum.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -38,6 +38,10 @@ jobs:
       - name: Download dependencies
         run: go mod download && go mod tidy
 
+      - name: Download tools
+        run: go mod download && go mod tidy
+        working-directory: _tools
+
       - name: Update schema
         run: make download_schema download_e2e_schema
 
