--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   update-schema:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout latest code
         uses: actions/checkout@v2.3.4
@@ -14,30 +14,27 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2.1.3
         with:
-          go-version: '1.16.1'
+          go-version: 1.16
 
       - name: Get Go environment
         id: go-env
         run: |
           echo "::set-output name=cache::$(go env GOCACHE)"
           echo "::set-output name=modcache::$(go env GOMODCACHE)"
-
       - name: Set up cache
         uses: actions/cache@v2.1.4
         with:
           path: |
             ${{ steps.go-env.outputs.cache }}
             ${{ steps.go-env.outputs.modcache }}
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: update-schema-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
-            ${{ runner.os }}-go-
+            update-schema-${{ runner.os }}-go-
 
       # We run tidy after download because download and tidy produce different go.sum.
       # See https://github.com/golang/go/issues/35832
-
       - name: Download dependencies
         run: go mod download && go mod tidy
-
       - name: Download tools
         run: go mod download && go mod tidy
         working-directory: _tools
@@ -54,7 +51,7 @@ jobs:
         with:
           author: GitHub <actions@github.com>
           committer: GitHub <actions@github.com>
-          commit-message: 'feat(schema): update latest layer'
+          commit-message: 'feat(schema): update schema to the latest layer'
           branch: feat/update-schema
           delete-branch: true
 
