--- a/.github/workflows/pr-extra.yml
+++ b/.github/workflows/pr-extra.yml
@@ -6,14 +6,22 @@ on:
     branches:
       - main
   pull_request:
+  workflow_dispatch:
+
 jobs:
   vulns:
-    name: Vulnerability scanner
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-      - name: Run go list
+      - name: Checkout code
+        uses: actions/checkout@v2.3.4
+
+      - name: Install Go
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.16
+
+      - name: List dependencies
         run: go list -json -m all > go.list
-      - name: Nancy
+
+      - name: Run nancy
         uses: sonatype-nexus-community/nancy-github-action@v1.0.2
