--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        arch:
+          - amd64
         runner:
           - ubuntu-latest
           - macos-latest
           - windows-latest
+        include:
+          - arch: 386
+            runner: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.3.4
@@ -46,6 +51,8 @@ jobs:
         run: go mod download && go mod tidy
 
       - name: Run tests
+        env:
+          GOARCH: ${{ matrix.arch }}
         run: go test --timeout 5m ./...
 
       - name: Run tests with race
