--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,9 @@ jobs:
           path: |
             ${{ steps.go-env.outputs.cache }}
             ${{ steps.go-env.outputs.modcache }}
-          key: test-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: test-${{ runner.os }}-${{ matrix.arch }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
-            test-${{ runner.os }}-go-
+            test-${{ runner.os }}-${{ matrix.arch }}-go-
 
       - name: Download dependencies
         run: go mod download && go mod tidy
