--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        flags: [""]
         arch:
           - amd64
         runner:
@@ -23,6 +24,9 @@ jobs:
         include:
           - arch: 386
             runner: ubuntu-latest
+          - arch: amd64
+            runner: ubuntu-latest
+            flags: "-race"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.3.4
@@ -53,8 +57,6 @@ jobs:
       - name: Run tests
         env:
           GOARCH: ${{ matrix.arch }}
+          GOFLAGS: ${{ matrix.flags }}
         run: go test --timeout 5m ./...
 
-      - name: Run tests with race
-        if: ${{ matrix.runner == 'ubuntu-latest' }}
-        run: go test --timeout 5m --race ./...
