chore: ignore examples and ruleguard rules in coverage report

--- a/.codecov.yaml
+++ b/.codecov.yaml
@@ -7,6 +7,10 @@ ignore:
   - "**/bindata.go"
   # Ignore commands (examples or internal utilities).
   - "cmd/*/*.go"
+  # Ignore examples
+  - "examples/**"
+  # Ignore ruleguard rules
+  - "gorules/**"
   # Ignore testing utilities
   - "telegram/internal/*test/*"
 
