--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -60,3 +60,57 @@ jobs:
             Update Telegram API schema to the latest layer.
           labels: |
             dependencies
+
+  update-keys:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout latest code
+        uses: actions/checkout@v2.3.4
+
+      - name: Install Go
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.16
+
+      - name: Get Go environment
+        id: go-env
+        run: |
+          echo "::set-output name=cache::$(go env GOCACHE)"
+          echo "::set-output name=modcache::$(go env GOMODCACHE)"
+      - name: Set up cache
+        uses: actions/cache@v2.1.6
+        with:
+          path: |
+            ${{ steps.go-env.outputs.cache }}
+            ${{ steps.go-env.outputs.modcache }}
+          key: update-keys-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            update-keys-${{ runner.os }}-go-
+
+      # We run tidy after download because download and tidy produce different go.sum.
+      # See https://github.com/golang/go/issues/35832
+      - name: Download dependencies
+        run: go mod download && go mod tidy
+      - name: Download tools
+        run: go mod download && go mod tidy
+        working-directory: _tools
+
+      - name: Update schema
+        run: make download_keys
+
+      - name: Generate files
+        run: make generate
+
+      - name: Create PR
+        id: cpr
+        uses: peter-evans/create-pull-request@v3.10.0
+        with:
+          author: GitHub <actions@github.com>
+          committer: GitHub <actions@github.com>
+          commit-message: 'feat(keys): update public keys'
+          branch: feat/update-keys
+          delete-branch: true
+
+          title: Update Telegram public keys
+          body: |
+            Update Telegram public keys.
