chore(editorconfig): remove unused entries

--- a/.editorconfig
+++ b/.editorconfig
@@ -16,10 +16,6 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
-[*.py]
-indent_style = space
-indent_size = 4
-
 # Makefiles always use tabs for indentation
-[{Makefile,Makefile.config}]
+[Makefile]
 indent_style = tab
