ci(codecov): exclude telegram/updates folder

--- a/.codecov.yaml
+++ b/.codecov.yaml
@@ -13,6 +13,7 @@ ignore:
   - "gorules/**"
   # Ignore testing utilities
   - "telegram/internal/*test/*"
+  - "telegram/updates/**"
 
 coverage:
   status:
