chore: fix lint issues

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -132,3 +132,6 @@ issues:
 
     - linters: [ revive ]
       text: "if-return: redundant if ...; err != nil check, just return error instead."
+
+    - linters: [ unparam ]
+      text: "Builder.+is never used"
