--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,6 +24,24 @@ jobs:
         with:
           go-version: 1.17
 
+      - name: Get Go environment
+        id: go-env
+        run: |
+          echo "::set-output name=cache::$(go env GOCACHE)"
+          echo "::set-output name=modcache::$(go env GOMODCACHE)"
+          echo "::set-output name=lintcache::$HOME/.cache/golangci-lint"
+
+      - name: Set up cache
+        uses: actions/cache@v2.1.6
+        with:
+          path: |
+            ${{ steps.go-env.outputs.cache }}
+            ${{ steps.go-env.outputs.modcache }}
+            ${{ steps.go-env.outputs.lintcache }}
+          key: lint-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('tg/*.go') }}
+          restore-keys: |
+            lint-${{ runner.os }}-go-
+
       - name: Lint
         env:
           GOARCH: ${{ matrix.arch }}
@@ -61,9 +79,9 @@ jobs:
             check-mod-${{ runner.os }}-go-
 
       - name: Download dependencies
-        run: go mod download && go mod tidy
+        run: go mod tidy
       - name: Download tools
-        run: go mod download && go mod tidy
+        run: go mod tidy
         working-directory: _tools
 
       - name: Check git diff
@@ -97,9 +115,9 @@ jobs:
             check-generate-${{ runner.os }}-go-
 
       - name: Download dependencies
-        run: go mod download && go mod tidy
+        run: go mod tidy
       - name: Download tools
-        run: go mod download && go mod tidy
+        run: go mod tidy
         working-directory: _tools
 
       - name: Generate files
