ci: add arm64 runner

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
           - arch: amd64
             runner: ubuntu-latest
             flags: "-race"
+          - arch: arm64
+            runner: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.4.0
