--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -5,58 +5,22 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  update-schema:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout latest code
-        uses: actions/checkout@v2.4.0
+  telegram:
+    uses: gotd/td/.github/workflows/update-schema.yml@main
+    with:
+      schema-name: "Telegram"
+      make-command: "download_schema"
 
-      - name: Install Go
-        uses: actions/setup-go@v2.1.4
-        with:
-          go-version: 1.17
+  encrypted:
+    uses: gotd/td/.github/workflows/update-schema.yml@main
+    with:
+      schema-name: "E2E"
+      branch: "feat/update-e2e-schema"
+      make-command: "download_e2e_schema"
 
-      - name: Get Go environment
-        id: go-env
-        run: |
-          echo "::set-output name=cache::$(go env GOCACHE)"
-          echo "::set-output name=modcache::$(go env GOMODCACHE)"
-      - name: Set up cache
-        uses: actions/cache@v2.1.7
-        with:
-          path: |
-            ${{ steps.go-env.outputs.cache }}
-            ${{ steps.go-env.outputs.modcache }}
-          key: update-schema-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            update-schema-${{ runner.os }}-go-
-
-      # We run tidy after download because download and tidy produce different go.sum.
-      # See https://github.com/golang/go/issues/35832
-      - name: Download dependencies
-        run: go mod download && go mod tidy
-      - name: Download tools
-        run: go mod download && go mod tidy
-        working-directory: _tools
-
-      - name: Update schema
-        run: make download_schema download_e2e_schema
-
-      - name: Generate files
-        run: make generate
-
-      - name: Create PR
-        id: cpr
-        uses: peter-evans/create-pull-request@v3.11.0
-        with:
-          author: GitHub <actions@github.com>
-          committer: GitHub <actions@github.com>
-          commit-message: 'feat(schema): update schema to the latest layer'
-          branch: feat/update-schema
-          delete-branch: true
-
-          title: Update schema to the latest layer
-          body: |
-            Update Telegram API schema to the latest layer.
-          labels: |
-            dependencies
+  tdlib:
+    uses: gotd/td/.github/workflows/update-schema.yml@main
+    with:
+      schema-name: "TDLib"
+      branch: "feat/update-tdlib-schema"
+      make-command: "download_tdlib_schema"
