--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -10,8 +10,8 @@ jobs:
     with:
       schema-name: "Telegram"
       make-command: "download_schema"
-      APP_ID: ${{ secrets.APP_ID }}
-      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
+      APP_ID: "${{ secrets.APP_ID }}"
+      APP_PRIVATE_KEY: "${{ secrets.APP_PRIVATE_KEY }}"
 
   encrypted:
     uses: gotd/td/.github/workflows/update-schema.yml@main
@@ -19,8 +19,8 @@ jobs:
       schema-name: "E2E"
       branch: "feat/update-e2e-schema"
       make-command: "download_e2e_schema"
-      APP_ID: ${{ secrets.APP_ID }}
-      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
+      APP_ID: "${{ secrets.APP_ID }}"
+      APP_PRIVATE_KEY: "${{ secrets.APP_PRIVATE_KEY }}"
 
   tdlib:
     uses: gotd/td/.github/workflows/update-schema.yml@main
@@ -28,5 +28,5 @@ jobs:
       schema-name: "TDLib"
       branch: "feat/update-tdlib-schema"
       make-command: "download_tdlib_schema"
-      APP_ID: ${{ secrets.APP_ID }}
-      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
+      APP_ID: "${{ secrets.APP_ID }}"
+      APP_PRIVATE_KEY: "${{ secrets.APP_PRIVATE_KEY }}"
