--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -6,27 +6,36 @@ on:
 
 jobs:
   telegram:
-    uses: gotd/td/.github/workflows/update-schema.yml@main
-    with:
-      schema-name: "Telegram"
-      make-command: "download_schema"
-      APP_ID: "${{ secrets.APP_ID }}"
-      APP_PRIVATE_KEY: "${{ secrets.APP_PRIVATE_KEY }}"
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - uses: gotd/td/.github/workflows/update-schema.yml@main
+        with:
+          schema-name: "Telegram"
+          make-command: "download_schema"
+          APP_ID: "${{ secrets.APP_ID }}"
+          APP_PRIVATE_KEY: "${{ secrets.APP_PRIVATE_KEY }}"
 
   encrypted:
-    uses: gotd/td/.github/workflows/update-schema.yml@main
-    with:
-      schema-name: "E2E"
-      branch: "feat/update-e2e-schema"
-      make-command: "download_e2e_schema"
-      APP_ID: "${{ secrets.APP_ID }}"
-      APP_PRIVATE_KEY: "${{ secrets.APP_PRIVATE_KEY }}"
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - uses: gotd/td/.github/workflows/update-schema.yml@main
+        with:
+          schema-name: "E2E"
+          branch: "feat/update-e2e-schema"
+          make-command: "download_e2e_schema"
+          APP_ID: "${{ secrets.APP_ID }}"
+          APP_PRIVATE_KEY: "${{ secrets.APP_PRIVATE_KEY }}"
 
   tdlib:
-    uses: gotd/td/.github/workflows/update-schema.yml@main
-    with:
-      schema-name: "TDLib"
-      branch: "feat/update-tdlib-schema"
-      make-command: "download_tdlib_schema"
-      APP_ID: "${{ secrets.APP_ID }}"
-      APP_PRIVATE_KEY: "${{ secrets.APP_PRIVATE_KEY }}"
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - uses: gotd/td/.github/workflows/update-schema.yml@main
+        with:
+          schema-name: "TDLib"
+          branch: "feat/update-tdlib-schema"
+          make-command: "download_tdlib_schema"
+          APP_ID: "${{ secrets.APP_ID }}"
+          APP_PRIVATE_KEY: "${{ secrets.APP_PRIVATE_KEY }}"
