--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   test:
-    runs-on: [self-hosted, linux, arm64]
+    runs-on: [self-hosted, linux, x64]
     steps:
       - name: Install Go
         uses: actions/setup-go@v2.1.4
