--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
       fail-fast: false
       matrix:
         flags: [""]
+        go:
+          - 1.17
         arch:
           - amd64
         runner:
@@ -22,11 +24,17 @@ jobs:
         include:
           - arch: 386
             runner: ubuntu-latest
+            go: 1.17
           - arch: amd64
+            go: 1.17
             runner: [self-hosted, linux, x64]
             flags: "-race"
           - arch: arm64
+            go: 1.17
             runner: [self-hosted, linux, arm64]
+          - arch: amd64
+            runner: ubuntu-latest
+            go: 1.18.0-beta1
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.4.0
@@ -34,7 +42,8 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2.1.4
         with:
-          go-version: 1.17
+          stable: false
+          go-version: ${{ matrix.go }}
 
       - name: Get Go environment
         id: go-env
@@ -47,12 +56,9 @@ jobs:
           path: |
             ${{ steps.go-env.outputs.cache }}
             ${{ steps.go-env.outputs.modcache }}
-          key: test-${{ runner.os }}-${{ matrix.arch }}-go-${{ hashFiles('**/go.sum') }}
+          key: test-${{ runner.os }}-${{ matrix.arch }}-go-${{ matrix.go }}-${{ hashFiles('**/go.sum') }}
           restore-keys: |
-            test-${{ runner.os }}-${{ matrix.arch }}-go-
-
-      - name: Download dependencies
-        run: go mod download && go mod tidy
+            test-${{ runner.os }}-${{ matrix.arch }}-go-${{ matrix.go }}-
 
       - name: Run tests
         env:
