--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ steps.go-env.outputs.modcache }}
-          key: benchmark-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: benchmark-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/go.mod') }}
           restore-keys: |
             benchmark-${{ runner.os }}-go-
 
