--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
           path: |
             ${{ steps.go-env.outputs.cache }}
             ${{ steps.go-env.outputs.modcache }}
-          key: test-${{ runner.os }}-${{ matrix.arch }}-go-${{ matrix.go }}-${{ hashFiles('**/go.sum') }}
+          key: test-${{ runner.os }}-${{ matrix.arch }}-go-${{ matrix.go }}-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/go.mod') }}
           restore-keys: |
             test-${{ runner.os }}-${{ matrix.arch }}-go-${{ matrix.go }}-
 
