--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,7 +36,7 @@ jobs:
             ${{ steps.go-env.outputs.cache }}
             ${{ steps.go-env.outputs.modcache }}
             ${{ steps.go-env.outputs.lintcache }}
-          key: lint-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('tg/*.go') }}
+          key: lint-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/go.mod') }}-${{ hashFiles('tg/*.go') }}
           restore-keys: |
             lint-${{ runner.os }}-go-
 
@@ -71,7 +71,7 @@ jobs:
           path: |
             ${{ steps.go-env.outputs.cache }}
             ${{ steps.go-env.outputs.modcache }}
-          key: check-mod-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: check-mod-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/go.mod') }}
           restore-keys: |
             check-mod-${{ runner.os }}-go-
 
@@ -101,7 +101,7 @@ jobs:
           path: |
             ${{ steps.go-env.outputs.cache }}
             ${{ steps.go-env.outputs.modcache }}
-          key: check-generate-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: check-generate-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/go.mod') }}
           restore-keys: |
             check-generate-${{ runner.os }}-go-
 
