--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -48,7 +48,7 @@ jobs:
           path: |
             ${{ steps.go-env.outputs.cache }}
             ${{ steps.go-env.outputs.modcache }}
-          key: update-schema-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: update-schema-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/go.mod') }}
           restore-keys: |
             update-schema-${{ runner.os }}-go-
 
