chore: fix lint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -42,7 +42,6 @@ linters-settings:
 linters:
   disable-all: true
   enable:
-    - deadcode
     - depguard
     - dogsled
     - dupl
@@ -61,13 +60,10 @@ linters:
     - misspell
     - nakedret
     - staticcheck
-    - structcheck
     - stylecheck
     - typecheck
     - unconvert
-    - unparam
     - unused
-    - varcheck
     - whitespace
 
   # Do not enable:
@@ -128,6 +124,10 @@ issues:
     - path: tgtest
       linters: [ revive, golint ]
       text: "should have comment or be unexported"
+
+    - path: internal
+      linters: [ revive ]
+      text: "package-comments"
 
     - linters: [ staticcheck ]
       text: "SA1019: telegram.+ is deprecated:"
